--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
 .App {
   text-align: center;
+  font-size: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+b {
+  font-size: 50px;
+  color: crimson;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+b:hover {
+  color: midnightblue;
+  cursor: pointer;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.list {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items:center;
+}
+img {
+  height: 30px;
+  width: auto;
+  padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+article:nth-of-type(1) {
+  text-decoration:line-through;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+article:nth-of-type(2) {
+  text-decoration:line-through;
+}
+article:nth-of-type(5) {
+  text-decoration: underline;
+}
+article:nth-of-type(6) {
+  text-decoration: underline;
 }
